Docs: rewrite everything to the current state -- v4 is the format, 234 is the baseline
The journey narratives are gone; the docs now describe the system as it is.

Benchmarks: README's headline and both benchmark docs now carry the 2026-08-04
numbers from host 234 (Xeon Silver 4114T) -- 7.1x storage, 3-6x faster aggregates,
233k rows/s load, 108k rows/s re-tier -- and lead with the fact that v3's
storage-vs-query tradeoff no longer exists. The generated report files are the 234
harness outputs. Read patterns not yet re-measured on v4 sit in an explicit
"awaiting re-measurement" table tagged with their old host, because deleting a
number is indistinguishable from never having measured it.

Format docs: chunk-format-v4.md is the live spec -- status current, the missing
section 4.5 written from the code that is its de-facto authority, and every
"discovered during implementation" correction folded into plain normative text.
columnar-chunks.md is a stub pointing at v4 (the format it described no longer
exists). codec-bakeoff and simd-decode-design carry settled-verdict headers;
sp4-plan is a closure record -- shipped, cancelled-with-reasons, and the three
open items.

Ops docs: swept for v3/Chimp remnants and verified against the code rather than
against each other -- which caught real drift: timeseries-memtable.md described
fallback conditions the code no longer has, production-rollout claimed TSCS had no
distributed tests when one exists, TTL guidance said 62d where production runs 10y,
and capacity math still assumed v3 bytes/row. The node-41 deploy knowledge (jar
naming, the plantpulse-ha watchdog, start.sh OOM protection) now lives in
production-rollout instead of a dated incident report.

One code touch rides along: TieringPolicy's removed-key message said "chimp128 is
now the only chunk codec", which stopped being true today; it now says the format
is fixed by the build. The test that pins the message is updated with it
(TieringPolicyTest green).

Co-Authored-By: 